# gpu-cpu_stuff

./: .gitignore  README.md
BasicCNN/: CMakeLists.txt  README.md
BasicCNN/cuda/: conv_kernel.cu  fc_kernel.cu  gpu_layers.cu  pool_kernel.cu  relu_kernel.cu
BasicCNN/include/: gpu_layers.h  layers.h  mnist_loader.h  tensor.h
BasicCNN/src/: cnn_viewer.cpp  layers.cpp  main.cpp  mnist_loader.cpp
CacheMissesImpactLatency/: CMakeLists.txt  README.md
CacheMissesImpactLatency/src/: main.cpp
Convolution/: CMakeLists.txt  README.md
Convolution/include/: image.hpp
Convolution/src/: convolution_cpu.cpp  convolution_cuda.cu  image.cpp  main.cpp
FalseSharing/: CMakeLists.txt  README.md
FalseSharing/src/: main.cpp
GPUConvolution/: CMakeLists.txt  README.md
GPUConvolution/include/: convolution_cpu.hpp  convolution_cuda.hpp  image.hpp
GPUConvolution/src/: convolution_cpu.cpp  image.cpp
Histogram/: CMakeLists.txt  README.md
Histogram/include/: histo_cuda.hpp  utils.hpp
Histogram/src/: histo_cpu.cpp  histo_cuda.cu  main.cpp
ILP/: CMakeLists.txt
ILP/src/: main.cpp
VectorAndMatricesOperations/: CMakeLists.txt  main.cu
gpu_convolution/src/: convolution_cuda.cu  main.cpp
